--- a/app/containers/App.css
+++ b/app/containers/App.css
@@ -7,15 +7,57 @@
   overflow: auto;
 }
 
-.todos {
-  width: 100%;
-  height: 100vh;
-  background-color: red;
-  padding: 50px;
+p{
+  font-size: 14px;
+  color: white;
 }
 
-.todo-div{
-  width: 100%;
-  height: 100vh;
-  background-color: red;
+a{
+  color: white;
 }
+
+h1{
+  margin: 5px;
+  font-weight: 400;
+}
+
+
+.todos {
+  padding: 20px;
+  background-color: black;
+  overflow: scroll;
+}
+
+.tododiv{
+  color: rgb(82, 9, 9);
+  border-radius: 2px;
+  padding: 10px;
+  margin-bottom: 10px;
+  background-color: rgba(255, 255, 255, 0.253);
+  overflow: scroll;
+}
+
+.title{
+  font-size: 18px;
+  color: rgb(0, 0, 0);
+}
+
+.url{
+  cursor: pointer;
+}
+
+.completed{
+  color: rgb(3, 53, 3);
+  border-radius: 2px;
+  padding: 10px;
+  margin-bottom: 10px;
+  background-color: rgba(255, 255, 255, 0.253);
+  overflow: scroll;
+}
+
+.mainTitle{
+  color: white;
+  margin: 10px;
+}
+
+
